--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: python
 services:
   - redis-server
-python:
-  - '2.7'
-  - '3.7'
-env:
-  - DJANGO_VERSION=1.11.23
-  - DJANGO_VERSION=2.0
-  - DJANGO_VERSION=2.1
-  - DJANGO_VERSION=2.2
+matrix:
+  include:
+  - python: "2.7"
+    env: DJANGO_VERSION=1.11.23
+  - python: "3.7"
+    env: DJANGO_VERSION=2.0
+  - python: "3.7"
+    env: DJANGO_VERSION=2.1
+  - python: "3.7"
+    env: DJANGO_VERSION=2.2
 install:
   - pip install -q Django==$DJANGO_VERSION
   - pip install django-redis-cache
