--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ matrix:
   - python: "2.7"
     env: DJANGO_VERSION=1.11.23
   - python: "3.7"
+    env: DJANGO_VERSION=1.11.23
+  - python: "3.7"
     env: DJANGO_VERSION=2.0
   - python: "3.7"
     env: DJANGO_VERSION=2.1
